@@ -1,5 +1,8 @@
 Release Notes
 
+* 5/17/2017
+  * changed nRunningCap to ignore highPrioWaiting in AtlasPJT
+
 * 5/12/2017
   * setting nEsConsumers=1 etc for esFraction
 
